viya/sas-bases/overlays/network/istio/components/sas-cas-control/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-cas-access-management
spec:
  host: sas-cas-access-management
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /casAccessManagement/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-cas-formats
spec:
  host: sas-cas-formats
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /casFormats/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-cas-row-sets
spec:
  host: sas-cas-row-sets
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /casRowSets/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-licenses
spec:
  host: sas-licenses
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /licenses/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-cas-access-management
    sas.com/admin: namespace
  name: sas-cas-access-management
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /casAccessManagement
    - uri:
        prefix: /casAccessManagement/
    route:
    - destination:
        host: sas-cas-access-management
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-cas-formats
    sas.com/admin: namespace
  name: sas-cas-formats
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /casFormats
    - uri:
        prefix: /casFormats/
    route:
    - destination:
        host: sas-cas-formats
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-cas-row-sets
    sas.com/admin: namespace
  name: sas-cas-row-sets
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /casRowSets
    - uri:
        prefix: /casRowSets/
    route:
    - destination:
        host: sas-cas-row-sets
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-licenses
    sas.com/admin: namespace
  name: sas-licenses
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /licenses
    - uri:
        prefix: /licenses/
    route:
    - destination:
        host: sas-licenses
    timeout: 300s
